# demo-opengl-cmake

./: CMakeLists.txt  README.md  feature.md  package.md
resource/shader/: base.frag  base.vert
src/: CMakeLists.txt  main.cpp
src/2D/: triangle.cpp
src/2D/shape/: quad.cpp  triangle.cpp
src/2D/texture/: texture.cpp
src/3D/camera/: camera.cpp
src/3D/shape/: cube.cpp  light.cpp
src/model/: model.cpp
src/shader/: shader.cpp
src/util/: exception.cpp
